--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
     "react-markdown": "^5.0.3",
     "react-scripts": "4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
