--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-speech-kit": "^3.0.1",
+    "react-timer-hook": "^2.0.7",
     "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "web-vitals": "^0.2.4"
