--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
+    "@use-it/interval": "^1.0.0",
     "autoprefixer": "^9.8.6",
     "lodash.shuffle": "^4.2.0",
     "postcss": "^7.0.35",
