--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@testing-library/user-event": "^12.6.3",
     "@use-it/interval": "^1.0.0",
     "autoprefixer": "^9.8.6",
+    "framer-motion": "^3.10.0",
     "lodash.shuffle": "^4.2.0",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.15.4",
     "react-infinite-scroll-component": "^6.0.0",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
