--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
     "@use-it/interval": "^1.0.0",
     "autoprefixer": "^9.8.6",
     "framer-motion": "^3.10.0",
+    "install": "^0.13.0",
     "lodash.shuffle": "^4.2.0",
+    "npm": "^7.6.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-dnd": "^13.1.1",
+    "react-dnd-html5-backend": "^12.1.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
     "react-infinite-scroll-component": "^6.0.0",
