--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": "^7.6.1",
     "postcss": "^7.0.35",
     "react": "^17.0.1",
+    "react-countdown-hook": "^1.0.3",
     "react-dnd": "^13.1.1",
     "react-dnd-html5-backend": "^12.1.1",
     "react-dom": "^17.0.1",
