--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dnd-html5-backend": "^12.1.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.4",
+    "react-icons": "^4.2.0",
     "react-infinite-scroll-component": "^6.0.0",
     "react-markdown": "^5.0.3",
     "react-router-dom": "^5.2.0",
