--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "4.0.0",
     "react-speech-kit": "^3.0.1",
     "react-timer-hook": "^2.0.7",
+    "react-transition-group": "^4.4.2",
     "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "web-vitals": "^0.2.4"
