--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-small-projects",
-  "homepage": "https://matej-ch.github.io/react-small-projects/",
+  "homepage": "https://matej-ch.github.io/react-small-projects",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
